--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <h1>The New Developer</h1>
     <p>Having fun with web hosting</p>
+    <p class="funny">Ps...Josh is gay</p>
     
 </body>
 </html>
