added a click here page

--- a/about.html
+++ b/about.html
@@ -6,11 +6,8 @@
     <link rel="stylesheet" href="styles.css">
     <title>The New Developer</title>
 </head>
-<body>
-
-    <h1>The New Developer</h1>
-    <p>Having fun with web hosting</p>
-    <p class="funny">Ps...Josh is gay</p>
-    <a href="/about.html">Click Here</a>
+<body class="about">
+    <h1 class="hello">Hellooooooo</h1>
+    
 </body>
 </html>
